--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     </div>
     <div id="imgTop">
         <h1 id="faixa">Consultoria Jurídica</h1>
-        <div id="bottomImgTop"></div>
+        <div id="bottomImgTop">
+            <div id="itemMenu1" href="#"></div>
+            <div id="itemMenu2" href="#">Serviços</div>
+            <div id="itemMenu3" href="#"></div>
+            <div id="itemMenu4" href="#"></div>
+        </div>
     </div>
 </body>
 </html>
