Alteração nas divs do menu da parte de baixo da imagem principal

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div id="imgTop">
         <h1 id="faixa">Consultoria Jurídica</h1>
         <div id="bottomImgTop">
-            <div id="itemMenu1" href="#"></div>
-            <div id="itemMenu2" href="#">Serviços</div>
-            <div id="itemMenu3" href="#"></div>
-            <div id="itemMenu4" href="#"></div>
+            <div id="itemMenu1"></div>
+            <div id="itemMenu2">Serviços</div>
+            <div id="itemMenu3"></div>
+            <div id="itemMenu4"></div>
         </div>
     </div>
 </body>
